# simuce

./: README.md
base/: .gitignore  CMakeLists.txt  debug.h  fileio.c  fileio.h  header.h  memory.c  memory.h  simuce-base.c  simuce-base.h
base/tests/: CMakeLists.txt  test.c
math/: .gitignore  CMakeLists.txt  math_header.h  number_system.c  number_system.h  simuce-math.c  simuce-math.h
math/tests/: CMakeLists.txt  test.c
swan/: CMakeLists.txt  globals.c  globals.h  swan.c  swan.h  swan_header.h  token.c  token.h  treegen.c  treegen.h
swan/tests/: CMakeLists.txt  t1.swan  test.c  test.swan
